@@ -10,8 +10,6 @@ after record/playback/reset, there is a hidden track graphic or something...  I 
 
 energy vs. time chart not big enough to see all the data
 
-2.  I was wondering why there are buttons that say 'zoom out' and 'zoom in' on the Energy vs. Position graph rather than our standard magnifying glass buttons.
-
 4.  I'm not sure how this copy is supposed to function but it has the same graph at the bottom half of the window and the top half 
 (ok 60%) is black but includes data that goes off scale on the original Energy vs. Position graph.  Is this the idea?
 
